--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -9,7 +9,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>UploadAction</servlet-name>
-		<servlet-class>br.com.chutaum.action.UploadAction</servlet-class>
+		<servlet-class>br.com.chutaum.servlet.UploadAction</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>UploadAction</servlet-name>
@@ -25,7 +25,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet-mapping>
 	<servlet>
 		<servlet-name>UploadPolitician</servlet-name>
-		<servlet-class>br.com.chutaum.politician.UploadPolitician</servlet-class>
+		<servlet-class>br.com.chutaum.servlet.UploadPolitician</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>UploadPolitician</servlet-name>
