--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -39,5 +39,57 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>PoliticianQueue</servlet-name>
 		<url-pattern>/politician-queue</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>LoginGoogle</servlet-name>
+		<servlet-class>br.com.chutaum.servlet.LoginGoogle</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LoginGoogle</servlet-name>
+		<url-pattern>/login/login-google</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>LoginFacebook</servlet-name>
+		<servlet-class>br.com.chutaum.servlet.LoginFacebook</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LoginFacebook</servlet-name>
+		<url-pattern>/login/login-facebook</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>LoginFacebook</servlet-name>
+		<url-pattern>/login/facebook.html</url-pattern>
+	</servlet-mapping>
+	
+	
+	
+	  <security-constraint>
+        <web-resource-collection>
+            <url-pattern>/upload</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+    
+    <security-constraint>
+        <web-resource-collection>
+            <url-pattern>/upload-politician</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+    
+    
+    <security-constraint>
+        <web-resource-collection>
+            <url-pattern>/upload-action</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
 			
 </web-app>
