--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -53,10 +53,23 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>LoginFacebook</servlet-name>
 		<servlet-class>br.com.chutaum.servlet.LoginFacebook</servlet-class>
 	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>Logout</servlet-name>
+		<url-pattern>/login/logout</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Logout</servlet-name>
+		<servlet-class>br.com.chutaum.servlet.Logout</servlet-class>
+	</servlet>
+	
+	
 	<servlet-mapping>
 		<servlet-name>LoginFacebook</servlet-name>
 		<url-pattern>/login/login-facebook</url-pattern>
 	</servlet-mapping>
+	
 	<servlet-mapping>
 		<servlet-name>LoginFacebook</servlet-name>
 		<url-pattern>/login/facebook.html</url-pattern>
