--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -53,7 +53,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>LoginFacebook</servlet-name>
 		<servlet-class>br.com.chutaum.servlet.LoginFacebook</servlet-class>
 	</servlet>
-	
 	<servlet-mapping>
 		<servlet-name>Logout</servlet-name>
 		<url-pattern>/login/logout</url-pattern>
@@ -62,6 +61,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet>
 		<servlet-name>Logout</servlet-name>
 		<servlet-class>br.com.chutaum.servlet.Logout</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>PoliticianServlet</servlet-name>
+		<url-pattern>/politician</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>PoliticianServlet</servlet-name>
+		<servlet-class>br.com.chutaum.servlet.PoliticianServlet</servlet-class>
 	</servlet>
 	
 	
