--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Chutaum/war/WEB-INF/lib/gwt-servlet.jar
 /Chutaum/war/WEB-INF/lib/jdo2-api-2.3-eb.jar
 /Chutaum/war/WEB-INF/lib/jsr107cache-1.1.jar
+/war/WEB-INF/classes
+/war/WEB-INF/lib
