--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -160,4 +160,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
         </auth-constraint>
     </security-constraint>
 			
+    
+    <!-- Commit Teste -->
 </web-app>
