--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -100,7 +100,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<url-pattern>/login/facebook.html</url-pattern>
 	</servlet-mapping>
 	
-		<servlet-mapping>
+	<servlet-mapping>
 		<servlet-name>FollowServlet</servlet-name>
 		<url-pattern>/follow</url-pattern>
 	</servlet-mapping>
@@ -111,27 +111,48 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet>
 	
 	
-			<servlet-mapping>
+	<servlet-mapping>
 		<servlet-name>UnFollowServlet</servlet-name>
 		<url-pattern>/unfollow</url-pattern>
 	</servlet-mapping>
 	
-		<servlet>
+	<servlet>
 		<servlet-name>UnFollowServlet</servlet-name>
 		<servlet-class>br.com.chutaum.servlet.UnFollowServlet</servlet-class>
 	</servlet>
 	
 
-			<servlet-mapping>
+	<servlet-mapping>
 		<servlet-name>UserServlet</servlet-name>
 		<url-pattern>/cidadao</url-pattern>
 	</servlet-mapping>
 	
-		<servlet>
+	<servlet>
 		<servlet-name>UserServlet</servlet-name>
 		<servlet-class>br.com.chutaum.servlet.UserServlet</servlet-class>
 	</servlet>
 
+	<servlet-mapping>
+		<servlet-name>LikeServlet</servlet-name>
+		<url-pattern>/like</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>LikeServlet</servlet-name>
+		<servlet-class>br.com.chutaum.servlet.LikeServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>DislikeServlet</servlet-name>
+		<url-pattern>/dislike</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>DislikeServlet</servlet-name>
+		<servlet-class>br.com.chutaum.servlet.DislikeServlet</servlet-class>
+	</servlet>
+		
+	
 	  <security-constraint>
         <web-resource-collection>
             <url-pattern>/upload/</url-pattern>
