--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -151,7 +151,26 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>DislikeServlet</servlet-name>
 		<servlet-class>br.com.chutaum.servlet.DislikeServlet</servlet-class>
 	</servlet>
-		
+
+		<servlet-mapping>
+		<servlet-name>UnlikeServlet</servlet-name>
+		<url-pattern>/unlike</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>UnlikeServlet</servlet-name>
+		<servlet-class>br.com.chutaum.servlet.UndislikeServlet</servlet-class>
+	</servlet>
+
+			<servlet-mapping>
+		<servlet-name>UndislikeServlet</servlet-name>
+		<url-pattern>/undislike</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>UndislikeServlet</servlet-name>
+		<servlet-class>br.com.chutaum.servlet.UndislikeServlet</servlet-class>
+	</servlet>			
 	
 	  <security-constraint>
         <web-resource-collection>
