--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -159,7 +159,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	
 	<servlet>
 		<servlet-name>UnlikeServlet</servlet-name>
-		<servlet-class>br.com.chutaum.servlet.UndislikeServlet</servlet-class>
+		<servlet-class>br.com.chutaum.servlet.UnlikeServlet</servlet-class>
 	</servlet>
 
 			<servlet-mapping>
