--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /war/WEB-INF/appengine-generated/local_db.bin
 /war/WEB-INF/appengine-generated/local_db.bin
 /war/WEB-INF/appengine-generated/datastore-indexes-auto.xml
+/Tabelas CSV/email_vereadores.txt
+/.settings/org.eclipse.core.resources.prefs
