--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -201,5 +201,30 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
     </security-constraint>
 			
     
-    <!-- Commit Teste -->
+    
+    <servlet>
+		<servlet-name>mvc-dispatcher</servlet-name>
+		<servlet-class>
+                    org.springframework.web.servlet.DispatcherServlet
+                </servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+ 
+	<servlet-mapping>
+		<servlet-name>mvc-dispatcher</servlet-name>
+		<url-pattern>/api/*</url-pattern>
+	</servlet-mapping>
+ 
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/mvc-dispatcher-servlet.xml</param-value>
+	</context-param>
+ 
+	<listener>
+		<listener-class>
+                    org.springframework.web.context.ContextLoaderListener
+                </listener-class>
+	</listener>
+    
+ 
 </web-app>
